Added dynamic query and integration tests